# AgentLab

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  agentlab.toml  agentlab.toml.example
.github/workflows/: release.yml
docs/: 0_plan.md  1_implementation_plan.md
docs/en/: README.md  use-cases.md  werewolf-game.md
docs/zh-TW/: README.md  use-cases.md  werewolf-game.md
scripts/: package.sh
src/: config.rs  lib.rs  main.rs
src/agent/: chat_agent.rs  main_agent.rs  mod.rs  prompt.rs  room_orchestrator.rs
src/db/: agents.rs  conversations.rs  mod.rs  rooms.rs  skills.rs
src/openapi/: executor.rs  parser.rs
src/provider/: mod.rs  openai_compatible.rs  traits.rs
src/web/: handlers.rs  mod.rs  room_handlers.rs  sse.rs
static/: style.css
templates/: base.html
templates/admin/: agent_chat.html  agent_create.html  agent_edit.html  index.html  room.html  room_new.html  rooms.html
