[package]
name = "agentlab"
version = "0.1.0"
edition = "2021"
description = "AI agent orchestration platform for managing multiple agents through a unified web interface and API"
license = "MIT OR Apache-2.0"
repository = "https://github.com/pttlink/AgentLab"
authors = ["Jiayun"]

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
axum = { version = "0.8", features = ["json"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "timeout", "normalize-path", "trace"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
rusqlite = { version = "0.32", features = ["bundled"] }
askama = "0.12"
askama_axum = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
futures-util = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }
async-trait = "0.1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
parking_lot = "0.12"
dashmap = "6"

[profile.release]
opt-level = "z"
lto = "thin"
strip = true
